--- a/client/src/components/Testimonials/styles.css
+++ b/client/src/components/Testimonials/styles.css
@@ -1,24 +1,122 @@
+.testimonials-section {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: flex-start;
+  padding: 2rem;
+  border-radius: 30px;
+  background-color: #4A148C;
+  color: #FFFFFF;
+}
+
 .testimonials-container {
-    perspective: 1000px; /* Add perspective for 3D effect */
-  }
-  
-  .testimonial {
-    transition: transform 0.3s ease;
-    transform-style: preserve-3d;
-    transform: rotateY(0deg); /* Start with no rotation */
-    padding: 20px;
-  }
-  
-  .testimonials-container::-webkit-scrollbar {
-    width: 8px;
-  }
-  
-  .testimonials-container::-webkit-scrollbar-thumb {
-    background: var(--primary-color);
-    border-radius: 4px;
-  }
-  
-  .testimonials-container:hover .testimonial {
-    transform: rotateY(15deg); /* Add a slight 3D rotation on hover */
-  }
-  
+  width: 100%;
+  height: 600px; /* Set height to match Splide height */
+}
+
+.splide {
+  width: 100%;
+  height: 100%;
+}
+
+.splide__slide {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0.5;
+  transform: scale(0.8);
+  transition: opacity 0.3s ease, transform 0.3s ease;
+}
+
+.splide__slide.is-active {
+  opacity: 1;
+  transform: scale(1);
+}
+
+.testimonial-card {
+  display: flex;
+  align-items: center;
+  padding: 1rem;
+  background-color: #E3F2FD;
+  border-radius: 8px;
+  transition: transform 0.3s ease, box-shadow 0.3s ease, margin 0.3s ease;
+  transform-style: preserve-3d;
+  transform: rotateY(0deg);
+  width: 100%;
+  max-width: 550px;
+}
+
+.testimonial-card.highlight {
+  background-color: #FFFFFF;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  transform: scale(1.1);
+  margin: 1rem 0;
+  transition: transform 0.3s ease, box-shadow 0.3s ease, margin 0.3s ease;
+}
+
+.testimonial-content {
+  margin-right: 1rem;
+}
+
+.testimonial-name {
+  font-weight: bold;
+  color: #000000;
+}
+
+.testimonial-text {
+  color: #616161;
+}
+
+.testimonial-image {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
+
+.testimonials-description {
+  width: 50%;
+}
+
+.testimonials-description h2 {
+  font-size: 1.5rem;
+  color: #BDBDBD;
+}
+
+.testimonials-description h3 {
+  font-size: 2rem;
+  font-weight: bold;
+  color: #FFFFFF;
+}
+
+.testimonials-description p {
+  color: #EEEEEE;
+}
+
+.ml14 {
+  font-weight: 200;
+  font-size: 2em;
+  color: white;
+}
+
+.ml14 .text-wrapper {
+  position: relative;
+  display: inline-block;
+  padding-top: 0.1em;
+  padding-right: 0.05em;
+  padding-bottom: 0.15em;
+}
+
+.ml14 .line {
+  opacity: 0;
+  position: absolute;
+  left: 0;
+  height: 2px;
+  width: 100%;
+  background-color: #fff;
+  transform-origin: 100% 100%;
+  bottom: 0;
+}
+
+.ml14 .letter {
+  display: inline-block;
+  line-height: 1em;
+}
