--- a/client/src/components/Testimonials/TestimonialsStyles.css
+++ b/client/src/components/Testimonials/TestimonialsStyles.css
@@ -90,33 +90,21 @@
 .testimonials-description p {
   color: #EEEEEE;
 }
-
-.ml14 {
-  font-weight: 200;
-  font-size: 2em;
-  color: white;
+.ml7 {
+  position: relative;
+  font-weight: 900;
+  font-size: 3.7em;
 }
-
-.ml14 .text-wrapper {
+.ml7 .text-wrapper {
   position: relative;
   display: inline-block;
-  padding-top: 0.1em;
+  padding-top: 0.2em;
   padding-right: 0.05em;
-  padding-bottom: 0.15em;
+  padding-bottom: 0.1em;
+  overflow: hidden;
 }
-
-.ml14 .line {
-  opacity: 0;
-  position: absolute;
-  left: 0;
-  height: 2px;
-  width: 100%;
-  background-color: #fff;
-  transform-origin: 100% 100%;
-  bottom: 0;
-}
-
-.ml14 .letter {
+.ml7 .letter {
+  transform-origin: 0 100%;
   display: inline-block;
   line-height: 1em;
 }
