--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,14 +1,5 @@
 body {
-  background: radial-gradient(
-    circle at 50% 50%,
-    rgba(255, 124, 0, 1) 0%,
-    rgba(255, 165, 0, 1) 25%,
-    rgba(241, 182, 19, 1) 50%,
-    rgba(0, 31, 116, 1) 75%,
-    rgba(19, 30, 37, 1) 100%
-  );
-  background-size: cover;
-  background-attachment: fixed; /* Gives a parallax-like effect when scrolling */
+ background: #110350; /* Gives a parallax-like effect when scrolling */
   
   margin: 0;
   padding-top: 60px;
