--- a/client/src/components/Hero/HeroImageCarousel.css
+++ b/client/src/components/Hero/HeroImageCarousel.css
@@ -5,7 +5,7 @@
   align-items: center;
   justify-content: center;
   position: relative;
-  background-color: #f5f5f5; /* Light lavender background */
+  background-color: #611313; /* Light lavender background */
   overflow: hidden;
   padding: 20px;
 }
